// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Label /> > Default story renders snapshot 1`] = `
<label
  class="_label_f9fc7e"
>
  <span
    class="_text_b3eba3 _text--body-md_b3eba3"
  >
    Label
  </span>
   
</label>
`;

exports[`<Label /> > LabelAfter story renders snapshot 1`] = `
<label
  class="_label_f9fc7e"
>
  <span
    class="_text_b3eba3 _text--body-md_b3eba3"
  >
    Label
  </span>
   
  <span
    class="_text_b3eba3 _text--body-sm_b3eba3"
  >
    <span>
      *
    </span>
  </span>
</label>
`;
